[gd_scene load_steps=20 format=3 uid="uid://5o1a38scymax"]

[ext_resource type="Script" path="res://scenes/enemies/NatalyBoss.gd" id="1_tavvb"]
[ext_resource type="Texture2D" uid="uid://bh33t8htmakba" path="res://assets_image/Characters/Nataly/Nataly-Sheet.png" id="2_i4e0l"]
[ext_resource type="Texture2D" uid="uid://dthqd5hqlryu5" path="res://assets_image/Objects/grappling_point.png" id="3_2j5sg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mo267"]
size = Vector2(32, 36.6667)

[sub_resource type="Animation" id="Animation_au4vj"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100, 101]
}

[sub_resource type="Animation" id="Animation_4wxgs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [88]
}

[sub_resource type="Animation" id="Animation_8kyeb"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93, 94, 95]
}

[sub_resource type="Animation" id="Animation_4dli0"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [72, 73]
}

[sub_resource type="Animation" id="Animation_4o6vw"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_7qg0t"]
resource_name = "die"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_a0i6h"]
resource_name = "combo"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_2y0ws"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36]
}

[sub_resource type="Animation" id="Animation_7mtrq"]
resource_name = "slash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_uiuxg"]
resource_name = "slash_2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grvm1"]
_data = {
"RESET": SubResource("Animation_4wxgs"),
"combo": SubResource("Animation_a0i6h"),
"die": SubResource("Animation_7qg0t"),
"hurt": SubResource("Animation_4o6vw"),
"idle": SubResource("Animation_au4vj"),
"jump": SubResource("Animation_4dli0"),
"run": SubResource("Animation_8kyeb"),
"shoot": SubResource("Animation_2y0ws"),
"slash": SubResource("Animation_7mtrq"),
"slash_2": SubResource("Animation_uiuxg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljdqk"]
size = Vector2(80, 57.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ati3x"]
size = Vector2(106.667, 63.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7b8b"]
size = Vector2(64, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_4pq4r"]
radius = 222.233

[node name="NatalyBoss" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(0.7, 0.7)
collision_layer = 4
collision_mask = 14
script = ExtResource("1_tavvb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.33332)
shape = SubResource("RectangleShape2D_mo267")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, -53)
texture = ExtResource("2_i4e0l")
hframes = 8
vframes = 13
frame = 88

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grvm1")
}

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="MeleeHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeHitbox"]
visible = false
position = Vector2(0, -19.25)
shape = SubResource("RectangleShape2D_ljdqk")

[node name="ComboHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ComboHitbox"]
visible = false
position = Vector2(2.11928e-06, -21.6667)
shape = SubResource("RectangleShape2D_ati3x")

[node name="DealAttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealAttackArea"]
visible = false
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_a7b8b")

[node name="RangeChase" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeChase"]
position = Vector2(8.88889, -17.7778)
shape = SubResource("CircleShape2D_4pq4r")

[node name="ShieldSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, -16)
texture = ExtResource("3_2j5sg")

[node name="ShieldParticles" type="CPUParticles2D" parent="."]
emitting = false

[node name="EdgeRayLeft" type="RayCast2D" parent="."]
position = Vector2(-16, 8)

[node name="EdgeRayRight" type="RayCast2D" parent="."]
position = Vector2(16, 8)

[node name="JumpRay" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(32, -40)

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="MeleeHitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="ComboHitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="DealAttackArea" to="." method="_on_deal_attack_area_area_entered"]
[connection signal="area_exited" from="DealAttackArea" to="." method="_on_deal_attack_area_area_exited"]
[connection signal="body_entered" from="RangeChase" to="." method="_on_range_chase_body_entered"]
[connection signal="body_exited" from="RangeChase" to="." method="_on_range_chase_body_exited"]
